--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,9 @@ version: 5.3.2
 homepage: https://github.com/pichillilorenzo/flutter_inappwebview
 
 environment:
-  sdk: ">=2.12.0-0 <3.0.0"
-  flutter: ">=1.22.2"
+  sdk: ">=2.7.0 <3.0.0"
+#  sdk: ">=2.12.0-0 <3.0.0"
+#  flutter: ">=1.22.2"
 
 dependencies:
   flutter:
